addit in main.js

--- a/Table_Booking/vercel.json
+++ b/Table_Booking/vercel.json
@@ -4,6 +4,10 @@
       {
         "src": "js/server.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "js/main.js",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
